manifests/def-po.yaml
apiVersion: v1
kind: Pod 
metadata: 
  name: default-pod 
  namespace: md 
  labels:
    app: default-pod 
spec: 
  containers:
    - name: default-pod 
      image: docker.io/library/def:latest 
      imagePullPolicy: IfNotPresent
      ports: 
        - containerPort: 80
