manifests/tol.yaml
#toleration pod 
apiVersion: v1
kind: Pod 
metadata: 
  name: toleration-pod 
  namespace: md 
spec: 
  tolerations:
    - key: "gpu"
      operator: "Equal"
      value: "true"
      effect: "NoSchedule"
  containers: 
    - name: nginx 
      image: nginx 
  # affinity:
  #   nodeAffinity: 
  #     requiredDuringSchedulingIgnoredDuringExecution:
  #       nodeSelectorTerms:
  #         - matchExpressions:
  #           - key: master 
  #             operator: "Exists"     

#kubectl label node minikube master=true
