manifests/def-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: def-svc
  namespace: md 
spec:
  selector:
    app: default-pod
  ports:
  - port: 80
    targetPort: 80
